tests/NormalTests/paczka1/fuzzy1/31989255.err
Error in line 8: srGHebTysdB S110 70,2
Error in line 11: srGHebTysdB A156 13,8
Error in line 12: srGHebTysdB S110 48,7
Error in line 7: kB34s A106 7,5
Error in line 14: kzR S830 12,3
Error in line 26: kzR S110 15,3
Error in line 33: 9OiynY A106 98,0
